[project]
name = "fastapi-blog"
version = "0.1.0"
description = "FastAPI Blog Management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.1",
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.136.1",
    "greenlet>=3.5.0",
    "isort>=8.0.1",
    "pillow>=12.2.0",
    "pre-commit>=4.6.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
